--- a/web/hotdeal/templates/index.html
+++ b/web/hotdeal/templates/index.html
@@ -12,7 +12,7 @@
     <table class="table table-hover">
         <thead>
             <tr>
-                <th scope="col">썸네일</th>
+                <th scope="col">썸네일2</th>
                 <th scope="col">제목</th>
                 <th scope="col">댓글</th>
                 <th scope="col">추천</th>
